--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -47,16 +47,16 @@
 
 **********************************************/
 
-/* 
-	
+/*
+
 	font-family: 'Roboto', sans-serif;
 	font-family: 'Fira Sans', sans-serif;
-	
+
 	font-family: 'Inter', sans-serif;
-	
+
 */
 
-/*** 
+/***
 
 ====================================================================
 	Root Code Variables
@@ -67,375 +67,375 @@
 /* Theme Color */
 
 :root {
-	
+
 	/* #0b5adb in decimal RGB */
   --main-color: rgb(11,90,219);
   --main-color-rgb:11,90,219;
-  
+
   /* #0896fc in decimal RGB */
   --color-two: rgb(8,150,252);
   --color-two-rgb:8,150,252;
-  
+
   /* #000611 in decimal RGB */
   --color-three: rgb(0,6,17);
   --color-three-rgb:0,6,17;
-  
+
   /* #e8e8e8 in decimal RGB */
   --color-four: rgb(232,232,232);
   --color-four-rgb:232,232,232;
-  
+
   /* #edf1f7 in decimal RGB */
   --color-five: rgb(237,241,247);
   --color-five-rgb:237,241,247;
-  
+
   /* #888888 in decimal RGB */
   --color-six: rgb(136,136,136);
   --color-six-rgb:136,136,136;
-  
+
   /* #122bbc in decimal RGB */
   --color-seven: rgb(18,43,188);
   --color-seven-rgb:18,43,188;
-  
+
   /* #ebebeb in decimal RGB */
   --color-eight: rgb(235,235,235);
   --color-eight-rgb:235,235,235;
-  
+
   /* #089BFF in decimal RGB */
   --color-nine: rgb(8,155,255);
   --color-nine-rgb:8,155,255;
-  
+
   /* #e7e7e7 in decimal RGB */
   --color-ten: rgb(231,231,231);
   --color-ten-rgb:231,231,231;
-  
+
   /* #cacfd6 in decimal RGB */
   --color-eleven: rgb(202,207,214);
   --color-eleven-rgb:202,207,214;
-  
+
   /* #e5e9fa in decimal RGB */
   --color-twelve: rgb(229,233,250);
   --color-twelve-rgb:229,233,250;
-  
+
   /* #e1e1e1 in decimal RGB */
   --color-thirteen: rgb(225,225,225);
   --color-thirteen-rgb:225,225,225;
-  
+
   /* #0f67f6 in decimal RGB */
   --color-fourteen: rgb(15,103,246);
   --color-fourteen-rgb:15,103,246;
-  
+
   /* #00070b in decimal RGB */
   --color-fifteen: rgb(0,7,11);
   --color-fifteen-rgb:0,7,11;
-  
+
   /* #747474 in decimal RGB */
   --color-sixteen: rgb(116,116,116);
   --color-sixteen-rgb:116,116,116;
-  
+
   /* #e9e6e6 in decimal RGB */
   --color-seventeen: rgb(233,230,230);
   --color-seventeen-rgb:233,230,230;
-  
+
   /* #f5f5f5 in decimal RGB */
   --color-eighteen: rgb(245,245,245);
   --color-eighteen-rgb:245,245,245;
-  
+
   /* #040823 in decimal RGB */
   --color-nineteen: rgb(4,8,35);
   --color-nineteen-rgb:4,8,35;
-  
+
   /* #eff3f8 in decimal RGB */
   --color-twenty: rgb(239,243,248);
   --color-twenty-rgb:239,243,248;
-  
+
   /* #081f47 in decimal RGB */
   --color-twentyone: rgb(8,31,71);
   --color-twentyone-rgb:8,31,71;
-  
+
   /* #383838 in decimal RGB */
   --color-twentytwo: rgb(56,56,56);
   --color-twentytwo-rgb:56,56,56;
-  
+
   /* #333333 in decimal RGB */
   --color-twentythree: rgb(51,51,51);
   --color-twentythree-rgb:51,51,51;
-  
+
   /* #0f0f35 in decimal RGB */
   --color-twentyfour: rgb(15,15,53);
   --color-twentyfour-rgb:15,15,53;
-  
+
   /* #c9c8c8 in decimal RGB */
   --color-twentyfive: rgb(201,200,200);
   --color-twentyfive-rgb:201,200,200;
-  
+
   /* #000018 in decimal RGB */
   --color-twentysix: rgb(0,0,24);
   --color-twentysix-rgb:0,0,24;
-  
+
   /* #9d9d9d in decimal RGB */
   --color-twentyseven: rgb(157,157,157);
   --color-twentyseven-rgb:157,157,157;
-  
+
   /* #323232 in decimal RGB */
   --color-twentyeight: rgb(50,50,50);
   --color-twentyeight-rgb:50,50,50;
-  
+
   /* #058283 in decimal RGB */
   --color-twentynine: rgb(5,130,131);
   --color-twentynine-rgb:5,130,131;
-  
+
   /* #4e4e4e in decimal RGB */
   --color-thirty: rgb(78,78,78);
   --color-thirty-rgb:78,78,78;
-  
-  /* #080808 in decimal RGB */
-  --color-thirtyone: rgb(8,8,8);
+
+  /* #08203A in decimal RGB */
+  --color-thirtyone: rgb(8, 32, 58);
   --color-thirtyone-rgb:8,8,8;
-  
+
   /* #7114EF in decimal RGB */
   --color-thirtytwo: rgb(113,20,239);
   --color-thirtytwo-rgb:113,20,239;
-  
+
   /* #1475f7 in decimal RGB */
   --color-thirtythree: rgb(20,117,247);
   --color-thirtythree-rgb:20,117,247;
-  
+
   /* #101130 in decimal RGB */
   --color-thirtyfour: rgb(16,17,48);
   --color-thirtyfour-rgb:16,17,48;
-  
+
   /* #e4e8f1 in decimal RGB */
   --color-thirtyfive: rgb(228,232,241);
   --color-thirtyfive-rgb:228,232,241;
-  
+
   /* #b6b7cf in decimal RGB */
   --color-thirtysix: rgb(182,183,207);
   --color-thirtysix-rgb:182,183,207;
-  
+
   /* #67687a in decimal RGB */
   --color-thirtyseven: rgb(103,104,122);
   --color-thirtyseven-rgb:103,104,122;
-  
+
   /* #ebeff4 in decimal RGB */
   --color-thirtyeight: rgb(235,239,244);
   --color-thirtyeight-rgb:235,239,244;
-  
+
   /* #f4f5fa in decimal RGB */
   --color-thirtynine: rgb(244,245,250);
   --color-thirtynine-rgb:244,245,250;
-  
+
   /* #57586d in decimal RGB */
   --color-fourty: rgb(87,88,109);
   --color-fourty-rgb:87,88,109;
-  
+
   /* #dfe0e6 in decimal RGB */
   --color-fourtyone: rgb(223,234,230);
   --color-fourtyone-rgb:223,234,230;
-  
+
   /* #edeeff in decimal RGB */
   --color-fourtytwo: rgb(237,238,255);
   --color-fourtytwo-rgb:237,238,255;
-  
+
   /* #eff1fb in decimal RGB */
   --color-fourtythree: rgb(239,241,251);
   --color-fourtythree-rgb:239,241,251;
-  
+
   /* #f4f9fd in decimal RGB */
   --color-fourtyfour: rgb(244,249,253);
   --color-fourtyfour-rgb:244,249,253;
-  
+
   /* #00d8ff in decimal RGB */
   --color-fourtyfive: rgb(0,216,255);
   --color-fourtyfive-rgb:0,216,255;
-  
+
   /* #e9f1ff in decimal RGB */
   --color-fourtysix: rgb(233,241,255);
   --color-fourtysix-rgb:233,241,255;
-  
+
   /* #0e0e0e in decimal RGB */
   --color-fourtyseven: rgb(14,14,14);
   --color-fourtyseven-rgb:14,14,14;
-  
+
   /* #e3e6fb in decimal RGB */
   --color-fourtyeight: rgb(227,230,251);
   --color-fourtyeight-rgb:227,230,251;
-  
+
   /* #eef2fb in decimal RGB */
   --color-fourtynine: rgb(238,242,251);
   --color-fourtynine-rgb:238,242,251;
-  
+
   /* #b1b1b1 in decimal RGB */
   --color-fifty: rgb(177,177,177);
   --color-fifty-rgb:177,177,177;
-  
+
   /* #ffcc00 in decimal RGB */
   --color-fiftyone: rgb(255,204,0);
   --color-fiftyone-rgb:255,204,0;
-  
+
   /* #edebff in decimal RGB */
   --color-fiftytwo: rgb(237,235,255);
   --color-fiftytwo-rgb:237,235,255;
-  
+
   /* #4f3dff in decimal RGB */
   --color-fiftythree: rgb(79,61,255);
   --color-fiftythree-rgb:79,61,255;
-  
+
   /* #f6f8ff in decimal RGB */
   --color-fiftyfour: rgb(246,248,255);
   --color-fiftyfour-rgb:246,248,255;
-  
+
   /* #017df0 in decimal RGB */
   --color-fiftyfive: rgb(1,125,240);
   --color-fiftyfive-rgb:1,125,240;
-  
+
   /* #362ba6 in decimal RGB */
   --color-fiftysix: rgb(54,43,166);
   --color-fiftysix-rgb:54,43,166;
-  
+
   /* #2e2d2d in decimal RGB */
   --color-fiftyseven: rgb(46,45,45);
   --color-fiftyseven-rgb:46,45,45;
-  
+
   /* #fcfbff in decimal RGB */
   --color-fiftyeight: rgb(252,251,255);
   --color-fiftyeight-rgb:252,251,255;
-  
+
   /* #e4e0ff in decimal RGB */
   --color-fiftynine: rgb(228,224,255);
   --color-fiftynine-rgb:228,224,255;
-  
+
   /* #f0eff7 in decimal RGB */
   --color-sixty: rgb(240,239,247);
   --color-sixty-rgb:240,239,247;
-  
+
   /* #555555 in decimal RGB */
   --color-sixtyone: rgb(85,85,85);
   --color-sixtyone-rgb:85,85,85;
-  
+
   /* #765dd4 in decimal RGB */
   --color-sixtytwo: rgb(118,93,212);
   --color-sixtytwo-rgb:118,93,212;
-  
+
   /* #f6f8fb in decimal RGB */
   --color-sixtythree: rgb(246,248,251);
   --color-sixtythree-rgb:246,248,251;
-  
+
   /* #FE0C7E in decimal RGB */
   --color-sixtyfour: rgb(254,12,126);
   --color-sixtyfour-rgb:254,12,126;
-  
+
   /* #e1deff in decimal RGB */
   --color-sixtyfive: rgb(225,222,255);
   --color-sixtyfive-rgb:225,222,255;
-  
+
   /* #8bbdfa in decimal RGB */
   --color-sixtysix: rgb(139,189,250);
   --color-sixtysix-rgb:139,189,250;
-  
+
   /* #0036b0 in decimal RGB */
   --color-sixtyseven: rgb(0,54,176);
   --color-sixtyseven-rgb:0,54,176;
-  
+
   /* #00aeff in decimal RGB */
   --color-sixtyeight: rgb(0,174,255);
   --color-sixtyeight-rgb:0,174,255;
-  
+
   /* #e9effb in decimal RGB */
   --color-sixtynine: rgb(233,239,251);
   --color-sixtynine-rgb:233,239,251;
-  
+
   /* #2b2b2b in decimal RGB */
   --color-seventy: rgb(43,43,43);
   --color-seventy-rgb:43,43,43;
-  
+
   /* #002358 in decimal RGB */
   --color-seventyone: rgb(0,35,88);
   --color-seventyone-rgb:0,35,88;
-  
+
   /* #000521 in decimal RGB */
   --color-seventytwo: rgb(0,5,33);
   --color-seventytwo-rgb:0,5,33;
-  
+
   /* #d6e3fd in decimal RGB */
   --color-seventythree: rgb(214,227,253);
   --color-seventythree-rgb:214,227,253;
-  
+
   /* #f0f3f7 in decimal RGB */
   --color-seventyfour: rgb(240,243,247);
   --color-seventyfour-rgb:240,243,247;
-  
+
   /* #e6ebf4 in decimal RGB */
   --color-seventyfive: rgb(230,235,244);
   --color-seventyfive-rgb:230,235,244;
-  
+
   /* #08d9ff in decimal RGB */
   --color-seventysix: rgb(8,217,255);
   --color-seventysix-rgb:8,217,255;
-  
+
   /* #08c2ff in decimal RGB */
   --color-seventyseven: rgb(8,194,255);
   --color-seventyseven-rgb:8,194,255;
-  
+
   /* #000917 in decimal RGB */
   --color-seventyeight: rgb(0,9,23);
   --color-seventyeight-rgb:0,9,23;
-  
+
   /* #ababab in decimal RGB */
   --color-seventynine: rgb(171,171,171);
   --color-seventynine-rgb:171,171,171;
-  
+
   /* #f6f7f8 in decimal RGB */
   --color-eighty: rgb(246,247,248);
   --color-eighty-rgb:246,247,248;
-  
+
   /* #00060f in decimal RGB */
   --color-eightyone: rgb(0,6,15);
   --color-eightyone-rgb:0,6,15;
-  
+
   /* #6a6777 in decimal RGB */
   --color-eightytwo: rgb(106,103,119);
   --color-eightytwo-rgb:106,103,119;
-  
+
   /* #666666 in decimal RGB */
   --color-eightythree: rgb(102,102,102);
   --color-eightythree-rgb:102,102,102;
-  
+
   /* #f2f6fb in decimal RGB */
   --color-eightyfour: rgb(242,246,251);
   --color-eightyfour-rgb:242,246,251;
-  
+
   /* #111111 in decimal RGB */
   --color-eightyfive: rgb(17,17,17);
   --color-eightyfive-rgb:17,17,17;
-  
-  
-  
-  
-  
-  
-  
-  
-  
+
+
+
+
+
+
+
+
+
   /* #ffffff in decimal RGB */
   --white-color:rgb(255,255,255);
   --white-color-rgb:255,255,255;
-  
+
   /* #000000 in decimal RGB */
   --black-color:rgb(0,0,0);
   --black-color-rgb:0,0,0;
-  
-  
+
+
   /* Fonts */
-  
+
   --font-family-Roboto: 'Roboto', sans-serif;
   --font-family-FiraSans: 'Fira Sans', sans-serif;
-  
+
   --font-family-Inter: 'Inter', sans-serif;
   --font-family-Rubik: 'Rubik', sans-serif;
-  
-  
+
+
 /* Fonts Size's */
-  
+
   --font-8: 8px;
   --font-10: 10px;
   --font-11: 11px;
@@ -494,9 +494,9 @@
   --font-120: 120px;
   --font-150: 150px;
   --font-200: 200px;
-  
+
   --margin-zero: 0px;
-  
+
   /* Margin Left Variables */
   --margin-left-5: 5px;
   --margin-left-10: 10px;
@@ -519,7 +519,7 @@
   --margin-left-95: 95px;
   --margin-left-100: 100px;
   --margin-left-120: 120px;
-  
+
   /* Margin Top Variables */
   --margin-top-5: 5px;
   --margin-top-10: 10px;
@@ -545,7 +545,7 @@
   --margin-top-120: 120px;
   --margin-top-140: 140px;
   --margin-top-150: 150px;
-  
+
   /* Margin Right Variables */
   --margin-right-5: 5px;
   --margin-right-10: 10px;
@@ -568,7 +568,7 @@
   --margin-right-95: 95px;
   --margin-right-100: 100px;
   --margin-right-110: 110px;
-  
+
   /* Margin Bottom Variables */
   --margin-bottom-5: 5px;
   --margin-bottom-10: 10px;
@@ -593,10 +593,10 @@
   --margin-bottom-130: 130px;
   --margin-bottom-150: 150px;
   --margin-bottom-200: 200px;
-  
-  
+
+
   --padding-zero: 0px;
-  
+
   /* Padding Left Variables */
   --padding-left-5: 5px;
   --padding-left-10: 10px;
@@ -631,7 +631,7 @@
   --padding-left-200: 200px;
   --padding-left-240: 240px;
   --padding-left-290: 290px;
-  
+
   /* Padding Top Variables */
   --padding-top-5: 5px;
   --padding-top-10: 10px;
@@ -660,7 +660,7 @@
   --padding-top-140: 140px;
   --padding-top-150: 150px;
   --padding-top-200: 200px;
-  
+
   /* Padding Right Variables */
   --padding-right-5: 5px;
   --padding-right-10: 10px;
@@ -693,7 +693,7 @@
   --padding-right-240: 240px;
   --padding-right-250: 250px;
   --padding-right-260: 260px;
-  
+
   /* Padding Bottom Variables */
   --padding-bottom-5: 5px;
   --padding-bottom-10: 10px;
@@ -721,17 +721,17 @@
   --padding-bottom-150: 150px;
   --padding-bottom-200: 200px;
   --padding-bottom-250: 250px;
-  
+
 }
 
-/*** 
+/***
 
 ====================================================================
 	Reset
 ====================================================================
 
  ***/
- 
+
 * {
 	margin:0px;
 	padding:0px;
@@ -741,7 +741,7 @@
 
 /* Preloader */
 
-.preloader{ 
+.preloader{
 	position:fixed;
 	left:0px;
 	top:0px;
@@ -755,7 +755,7 @@
 	background-size:80px;
 }
 
-/*** 
+/***
 
 ====================================================================
 	Global Settings
@@ -805,7 +805,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 input,button,select,textarea{
-	
+
 }
 
 textarea{
@@ -830,7 +830,7 @@ p{
 	line-height:28px;
 	color:var(--color-six);
 	font-size:var(--font-16);
-	
+
 }
 
 /* Typography */
@@ -868,7 +868,7 @@ h6{
 	font-size:var(--font-18);
 }
 
-/*** 
+/***
 
 ====================================================================
 	Social Icon One
@@ -929,7 +929,7 @@ h6{
 ul,li{
 	list-style:none;
 	padding:0px;
-	margin:0px;	
+	margin:0px;
 }
 
 img{
@@ -948,7 +948,7 @@ img{
 }
 
 .centered{
-	text-align:center;	
+	text-align:center;
 }
 
 ::-webkit-input-placeholder{color: inherit;}
@@ -1112,7 +1112,7 @@ img{
 
 .btn-style-one:hover .btn-wrap .text-two{
 	top: 50%;
-    -webkit-transform: translateY(-50%); 
+    -webkit-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
 }
@@ -1134,7 +1134,7 @@ img{
 }
 
 .btn-style-one:hover{
-	
+
 }
 
 .btn-style-one:hover:before{
@@ -1148,7 +1148,10 @@ img{
 	font-weight:700;
 	overflow: hidden;
 	text-align:center;
-	padding: 18px 44px;
+	/* padding: 18px 44px;*/
+    padding: 0px 26px 0px 26px;
+    line-height: 55px;
+    border-radius: 5px;
 	display:inline-block;
 	letter-spacing:1px;
 	color: var(--white-color);
@@ -1213,17 +1216,17 @@ img{
 
 .btn-style-two:hover .btn-wrap .text-two{
 	top: 50%;
-    -webkit-transform: translateY(-50%); 
+    -webkit-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
 }
 
 .btn-style-two:hover .btn-wrap .text-two{
-	color: var(--color-thirtythree);
+	color: var(--white-color);
 }
 
 .btn-style-two:hover .arrow{
-	
+
 }
 
 .btn-style-two i{
@@ -1244,11 +1247,15 @@ img{
 }
 
 .btn-style-two:hover{
-	
+
+
 }
 
 .btn-style-two:hover:before{
 	top: -40%;
+    background-image: linear-gradient(90deg, #2439FF 0%, #9F49E1 1%, #2439FF) !important;
+    background-color: transparent !important;
+
 }
 
 /* Btn Style Three */
@@ -1323,7 +1330,7 @@ img{
 
 .btn-style-three:hover .btn-wrap .text-two{
 	top: 50%;
-    -webkit-transform: translateY(-50%); 
+    -webkit-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
 }
@@ -1333,7 +1340,7 @@ img{
 }
 
 .btn-style-three:hover .arrow{
-	
+
 }
 
 .btn-style-three i{
@@ -1354,7 +1361,7 @@ img{
 }
 
 .btn-style-three:hover{
-	
+
 }
 
 .btn-style-three:hover:before{
@@ -1364,7 +1371,7 @@ img{
 /* Btn Style Four */
 
 .btn-style-four{
-	position: relative; 
+	position: relative;
 	font-weight:700;
 	overflow: hidden;
 	text-align:center;
@@ -1373,7 +1380,7 @@ img{
 	display:inline-block;
 	font-size: var(--font-16);
 	text-transform: capitalize;
-	color: var(--color-fiftythree); 
+	color: var(--color-fiftythree);
 	background-color: var(--color-fiftytwo);
 }
 
@@ -1432,7 +1439,7 @@ img{
 
 .btn-style-four:hover .btn-wrap .text-two{
 	top: 50%;
-    -webkit-transform: translateY(-50%); 
+    -webkit-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
 }
@@ -1442,7 +1449,7 @@ img{
 }
 
 .btn-style-four:hover .arrow{
-	
+
 }
 
 .btn-style-four i{
@@ -1463,7 +1470,7 @@ img{
 }
 
 .btn-style-four:hover{
-	
+
 }
 
 .btn-style-four:hover:before{
@@ -1473,17 +1480,21 @@ img{
 /* Btn Style Five */
 
 .btn-style-five{
-	position: relative; 
+	position: relative;
 	font-weight:700;
 	overflow: hidden;
 	text-align:center;
-	padding: 20px 42px;
+	/* padding: 20px 42px; */
+    padding: 0px 26px 0px 26px;
+    line-height: 55px;
 	border-radius:5px;
 	display:inline-block;
 	font-size: var(--font-16);
 	text-transform: capitalize;
-	color: var(--white-color); 
-	background-color: var(--color-fiftythree);
+	color: var(--white-color);
+	/* background-color: var(--color-fiftythree); */
+    background-image: linear-gradient(90deg, #2439FF 0%, #9F49E1 1%, #2439FF) !important;
+    background-color: transparent !important;
 }
 
 .btn-style-five:before{
@@ -1541,7 +1552,7 @@ img{
 
 .btn-style-five:hover .btn-wrap .text-two{
 	top: 50%;
-    -webkit-transform: translateY(-50%); 
+    -webkit-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
 }
@@ -1551,7 +1562,7 @@ img{
 }
 
 .btn-style-five:hover .arrow{
-	
+
 }
 
 .btn-style-five i{
@@ -1561,7 +1572,7 @@ img{
 }
 
 .btn-style-five:hover{
-	
+
 }
 
 .btn-style-five:hover:before{
@@ -1619,7 +1630,7 @@ img{
 
 /* Btn Style Seven */
 
-.btn-style-seven{ 
+.btn-style-seven{
 	position: relative;
 	font-weight:600;
 	overflow: hidden;
@@ -1690,7 +1701,7 @@ img{
 
 .btn-style-seven:hover .btn-wrap .text-two{
 	top: 50%;
-    -webkit-transform: translateY(-50%); 
+    -webkit-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
 }
@@ -1700,7 +1711,7 @@ img{
 }
 
 .btn-style-seven:hover .arrow{
-	
+
 }
 
 .btn-style-seven i{
@@ -1721,7 +1732,7 @@ img{
 }
 
 .btn-style-seven:hover{
-	
+
 }
 
 .btn-style-seven:hover:before{
@@ -1737,10 +1748,10 @@ img{
 img{
 	display:inline-block;
 	max-width:100%;
-	height:auto;	
+	height:auto;
 }
 
-/*** 
+/***
 
 ====================================================================
 	Section Title
@@ -1792,7 +1803,7 @@ img{
 	margin-top:var(--margin-top-20);
 }
 
-.sec-title.light .sec-title_text{ 
+.sec-title.light .sec-title_text{
 	color:var(--color-thirteen);
 }
 
@@ -1823,7 +1834,7 @@ img{
 	text-align:center;
 }
 
-/*** 
+/***
 
 ====================================================================
 	Section Title Two
@@ -1846,7 +1857,7 @@ img{
 	font-size:var(--font-18);
 	text-transform:capitalize;
 	box-shadow:0px 0px 15px rgba(0,0,0,0.10);
-	
+
 	color:var(--color-thirtytwo);
 	background: linear-gradient(90deg, var(--color-thirtythree) 0%, var(--color-thirtytwo) 100%);
 	-webkit-background-clip: text;
@@ -1885,7 +1896,7 @@ img{
 	margin-top:var(--margin-top-20);
 }
 
-.sec-title_two.light .sec-title_two-text{ 
+.sec-title_two.light .sec-title_two-text{
 	color:var(--color-thirteen);
 }
 
@@ -1897,7 +1908,7 @@ img{
 	text-align: center !important;
 }
 
-/*** 
+/***
 
 ====================================================================
 	Section Title Three
@@ -2034,7 +2045,7 @@ img{
 }
 
 .ui-menu .ui-menu-item:last-child{
-	border:none;	
+	border:none;
 }
 
 .ui-state-active, .ui-widget-content .ui-state-active{
